section-main-product.css
/* ... */
.product--no-media .product-view-details {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}
.product--no-media .product-form {
  flex-direction: column;
}

.product--no-media .product-form > .form {
  max-width: 30rem;
  width: 100%;
}

.product--no-media .product-form-quantity,
.product--no-media .product-form-input--dropdown {
  flex-direction: column;
  max-width: 100%;
}

.product-form-quantity .form-label {
  margin-bottom: 0.6rem;
}

.product-form-quantity-top .form-label {
  margin-bottom: 1.2rem;
}


.product--no-media fieldset.product-form-input {
  flex-wrap: wrap;
  margin: 0 auto 1.2rem auto;
}

.product-form__buttons {
  display: flex;
  grid-gap: 1rem;
  width: auto;
}

@media screen and (max-width: 990px) {
  .product-form__buttons {
    display: flex;
    flex-wrap: wrap;
  }
}

.product-form__buttons .product-form__submit,
.product-form__buttons .shopify-payment-button{
  width: auto;
}

@media screen and (max-width: 990px) {
  .product-form__buttons .product-form__submit,
  .product-form__buttons .shopify-payment-button {
    width: auto;
  }
}

.product-form-quantity .quantity:before {
    background: none;
}

.product--no-media .product-info-container > modal-opener {
  display: block;
  text-align: center;
}

.product--no-media .product-popup-modal-button {
  padding-right: 0;
}

/* Product media */
.product__media-list video {
  border-radius: var(--media-radius);
}

@media screen and (max-width: 749px) {
  .product__media-list {
    margin-left: -2.5rem;
    margin-bottom: 3rem;
    width: calc(100% + 4rem);
  }
  
  .product-media-wrapper .grid--peek.slider .grid-item:first-of-type {
    margin-left: 0;
  }

  .slider.product__media-list::-webkit-scrollbar {
    height: 0.2rem;
    width: 0.2rem;
  }

  .product__media-list::-webkit-scrollbar-thumb {
    background-color: rgb(var(--color-foreground));
  }

  .product__media-list::-webkit-scrollbar-track {
    background-color: rgba(var(--color-foreground), 0.2);
  }

  .product__media-list .product-media-item {
    width: 100%;
  }

  .product--mobile-columns .product-media-item {
    width: calc(50% - var(--grid-mobile-horizontal-spacing));
  }
}

@media screen and (min-width: 750px) {
  .product--thumbnail .product__media-list,
  .product--thumbnail_slider .product__media-list {
    padding-bottom: calc(var(--media-shadow-vertical-offset) * var(--media-shadow-visible));
  }

  .product__media-list {
    padding-right: calc(var(--media-shadow-horizontal-offset) * var(--media-shadow-visible));
  }

  .product--thumbnail .product-media-item:not(.is-active),
  .product--thumbnail_right .product-media-item:not(.is-active),
  .product--thumbnail_slider .product-media-item:not(.is-active) {
    display: none;
  }

  .product-media-modal__content > .product-media-item--variant.product-media-item--variant {
    display: none;
  }

  .product-media-modal__content > .product-media-item--variant:first-child {
    display: block;
  }

  .product-column-sticky.grid {
    display: flex;
    flex-direction: row;
  }

  .grid-item.thumbnail-slider {
    order: -1;
  }

  .reverse .grid-item.thumbnail-slider {
    order: 0;
  }

  .thumbnail-left-sidebar .grid-item .thumbnail-list {
    grid-template-columns: none;
  }

  .grid--2-col-tablet .grid-item.left-side {
    width: calc(80% - var(--grid-desktop-horizontal-spacing) / 2);
  }

  .grid--2-col-tablet .grid-item.right-side {
    width: calc(20% - var(--grid-desktop-horizontal-spacing) / 2);
  } 
  
  .grid--2-col-tablet .grid-item.right-side.thumbnail-small {
    width: calc(10% - var(--grid-desktop-horizontal-spacing) / 2);
  }

  .grid--2-col-tablet .grid-item.right-side.thumbnail-medium {
    width: calc(15% - var(--grid-desktop-horizontal-spacing) / 2);
  }

}

.product-media-item.product-media-item--variant {
  display: none;
}

.product-media-item--variant:first-child {
  display: block;
}

@media screen and (min-width: 750px) and (max-width: 989px) {
  .product__media-list .product-media-item:first-child {
    padding-left: 0;
  }

  .product--thumbnail_slider .product__media-list {
    margin-left: 0;
  }

  .product__media-list .product-media-item {
    width: 100%;
  }
}

.product__media-icon .icon {
  width: 1.2rem;
  height: 1.4rem;
}

.product__modal-opener .product__media-icon .icon {
  width: 2rem;
  height: 2rem;
}

.product__media-icon,
.thumbnail__badge {
  background-color: rgb(var(--color-background));
  border-radius: 50%;
  color: rgb(var(--color-foreground), 0.55);
  display: flex;
  align-items: center;
  justify-content: center;
  height: 4rem;
  width: 4rem;
  position: absolute;
  right: 1.4rem;
  top: 1.4rem;
  z-index: 1;
  transition: color var(--duration-long) ease, opacity var(--duration-long) ease;
  box-shadow: 0 0 4rem rgba(var(--color-foreground),.2);
}

.product__media-video .product__media-icon {
  opacity: 1;
}

.product__modal-opener--image .product__media-toggle:hover {
  cursor: zoom-in;
}

.product__modal-opener:hover .product__media-icon {
  color: rgb(var(--color-foreground));
}

@media screen and (min-width: 750px) {
  .grid-item.product-media-item--full {
    width: 100%;
  }

  .product--columns .product-media-item:not(.product-media-item--single):not(:only-child) {
    max-width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
  }

  .product--medium.product--columns .product-media-item--full .deferred-media-poster-button {
    height: 4.2rem;
    width: 4.2rem;
  }

  .product--medium.product--columns .product-media-item--full .deferred-media-poster-button .icon {
    width: 1.8rem;
    height: 1.8rem;
  }

}
/* ... */

